# aletheia

./: .editorconfig  .gitignore  LICENSE  Makefile  README.md  appcat.yaml  appmod.yaml  docker-compose.yml  package.json  pnpm-lock.yaml  pyproject.toml
ci/github-actions/: lint.yml  release.yml  test.yml
cli/: README.md  pyproject.toml
cli/aletheia_cli/: __init__.py  main.py
cli/aletheia_cli/client/: __init__.py  sidecar_client.py
cli/aletheia_cli/commands/: __init__.py  extract_cmd.py  parse_cmd.py  preview_cmd.py  serve_cmd.py
cli/aletheia_cli/utils/: __init__.py  cache.py  config.py  formatter.py
docs/: README.md
docs/api/: api_contract.md
docs/architecture/: system_architecture.md
docs/cli/: cli_usage.md
docs/development/: FUNDAMENTALS_COMPLETE.md  FUNDAMENTALS_PART2_COMPLETE.md  files_created.md  fundamentals_part2_plan.md  fundamentals_summary.md  implementation_plan.md  phase1_part1_plan.md
docs/extension/: vscode_extension.md
docs/getting-started/: quickstart.md
docs/security/: threat_model.md
examples/diagrams/: .gitkeep  README.md
examples/invoices/: .gitkeep  README.md
examples/minimal_demo/: .gitkeep  README.md  create_sample_pdf.py  expected_output.json
examples/research_papers/: .gitkeep  README.md
extension/: README.md
extension/vscode/: package.json  tsconfig.json  webpack.config.js
packaging/deb/: README.md
packaging/docker/: cli.Dockerfile  (+1 more)
shared_schemas/: diagramgraph.schema.json  document.schema.json  perception_query.schema.json  provenance.schema.json
sidecar/: Dockerfile  README.md  pyproject.toml  requirements.txt
sidecar/app/: __init__.py  config.py  logging.py  main.py
sidecar/app/api/: __init__.py  health.py  models.py  parse.py  query.py
sidecar/app/models/: __init__.py  diagram.py  document.py  query.py
sidecar/app/pipeline/: __init__.py  controller.py  orchestrator.py
sidecar/app/pipeline/ingest/: __init__.py  base.py  image_loader.py  pdf_loader.py
sidecar/app/pipeline/layout/: __init__.py  layout_base.py  layoutparser_backend.py
sidecar/app/pipeline/ocr/: __init__.py  ocr_base.py  tesseract_backend.py  trocr_backend.py
sidecar/app/pipeline/postprocess/: __init__.py  redaction.py  summarizer.py
sidecar/app/pipeline/preprocess/: __init__.py  image_cleaning.py
sidecar/app/pipeline/semantic/: __init__.py  layoutlm_infer.py
sidecar/app/pipeline/tables/: __init__.py  camelot_backend.py
sidecar/app/storage/: __init__.py  cache.py  document_store.py  filesystem.py
sidecar/app/utils/: __init__.py  bbox.py  hashing.py  provenance.py  timing.py
sidecar/scripts/: benchmark.py  download_models.py  warmup.py
sidecar/tests/integration/: __init__.py
sidecar/tests/performance/: __init__.py
sidecar/tests/phase1/: test_phase1_part1.py
sidecar/tests/unit/: __init__.py  test_layout.py
tests/: README.md  conftest.py
(+40 files in other folders)
